# Option_Arbitrage_Finder

./: .gitignore  OptionChain.cpp  OptionChain.h  Problem.cpp  Problem.h  README.md  codeStandards.md  code_standards.md  data2.txt  data3.txt  governance.md  main.cpp  makefile  option_chain.cpp  option_chain.h  program  projectSpecification.md  readme-file.md  testPlan.md  testingResults.md
Imperitive/test_data/: data1.txt  data3.txt
Imperitive/v1/: OptionChain.cpp  Problem.cpp  Problem.h  program
Imperitive/v2/: main.cpp
brute_force/: BruteForce.cpp  BruteForce.h  BruteForceDriver.cpp  Problem.h  bruteforce  makefile
haskell/: IO.hs  Main.hs  Option.hs  OptionChain.hs  OptionLeg.hs  Problem.hs  TestADT.hs  TestModules.hs
haskell/dist-newstyle/cache/: elaborated-plan  improved-plan  solver-plan  source-hashes
haskell/v1/: Main.hs  Problem.hs
haskell/v1/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
haskell/v2/: Main.hs  OptionLeg.hs  Problem.hs
haskell/v2/dist-newstyle/cache/: config  improved-plan  (+5 more)
haskell/v3/: Option.hs  Problem.hs  TestADT.hs
haskell/v4/: IO.hs  Main.hs  OptionChain.hs  OptionLeg.hs  Problem.hs  make.cabal
haskell/v4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
imperitive/v1/: OptionChain.h  Problem.cpp  Problem.h  data4.txt  main.cpp  makefile  program
imperitive/v2/: OptionChain.cpp  OptionChain.h  Problem.cpp  Problem.h  program
test_data/: data1.txt  data2.txt  data3.txt  data4.txt  data5.txt
(+6 files in other folders)
